# BI_Python_Rio_das_Ostras

./: .gitignore
02_projetos_bi/dengue_ministerio_saude/: .env.example  README.md  _api_root.html  pyproject.toml  requirements.txt  run_auditoria_json_fato.py  run_build_analytics.py  run_check_campos_criticos.py  run_cnes_downloader.py  run_downloader.py  run_json_backfill.py  run_load_cnes_dim.py  run_load_ibge_dim.py  run_pipeline.py  run_sql_first_validation.py  streamlit_app.py  swagger.json
02_projetos_bi/dengue_ministerio_saude/app/: __init__.py  business_rules.py  data_access.py  dicionario_sinan.py  main.py  theme.py
02_projetos_bi/dengue_ministerio_saude/app/components/: __init__.py  cards.py  charts.py  filters.py
02_projetos_bi/dengue_ministerio_saude/app/pages/: __init__.py
02_projetos_bi/dengue_ministerio_saude/dengue_ministerio_saude_bi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
02_projetos_bi/dengue_ministerio_saude/docs/: BI_STORYTELLING_BLUEPRINT.md  CHECKLIST_PRODUCAO.md  ESPECIFICACAO_FUNCIONAL_BI_DENGUE.md  IDENTIDADE_VISUAL_PMRO.md  README.md  RUNBOOK_OPERACAO.md
02_projetos_bi/dengue_ministerio_saude/ops/: cleanup_validated_with_tolerance.ps1  git_autopush.ps1  reprocess_divergentes.ps1  run_backfill_5anos_reverse.ps1  run_backup_schema_saude.ps1  run_daily_incremental.ps1  run_incremental_10dias.ps1  set_task_retry.ps1  test_smtp.ps1
02_projetos_bi/dengue_ministerio_saude/sql/ddl/: 001_fato_dengue_casos.sql  002_pipeline_metadata.sql  003_permissions_bi_user.sql  (+11 more)
02_projetos_bi/dengue_ministerio_saude/src/: __init__.py
(+31 files in other folders)
