[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dengue-ministerio-saude-bi"
version = "0.1.0"
description = "Base padronizada de BI para dengue em Rio das Ostras."
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pyarrow>=15.0.0",
  "requests>=2.32.0",
  "lxml>=5.2.0",
  "SQLAlchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "streamlit>=1.40.0",
  "plotly>=5.24.0",
  "python-dotenv>=1.0.0",
  "ijson>=3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "black>=24.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "notebooks"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"
